--- a/Lab1/job_market.ipynb
+++ b/Lab1/job_market.ipynb
@@ -375,7 +375,7 @@
    ],
    "source": [
     "#TODO: fix the data type of column Date\n",
-    "df[\"Date\"] = df[\"Date\"].replace(regex=True)\n",
+    "df[\"Date\"] = df[\"Date\"].replace({'T00:00;}', regex=True)\n",
     "df[\"Date\"] = pd.to_datetime(df[\"Date\"])\n",
     "\n",
     "df.dtypes"
